--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
+    "@types/pdfkit": "^0.17.4",
     "axios": "^1.12.0",
     "browser-image-compression": "^2.0.2",
     "chart.js": "^4.5.1",
@@ -68,6 +69,7 @@
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
+    "pdfkit": "^0.17.2",
     "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.11.1",
