--- a/client/public/manifest-assistente.json
+++ b/client/public/manifest-assistente.json
@@ -9,13 +9,13 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/pwa-icon-192.png",
+      "src": "/poweringeg-ai-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/pwa-icon-512.png",
+      "src": "/poweringeg-ai-icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -28,7 +28,7 @@
       "short_name": "Assistente",
       "description": "Fazer perguntas ao assistente de IA",
       "url": "/assistente-widget",
-      "icons": [{ "src": "/pwa-icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "/poweringeg-ai-icon-192.png", "sizes": "192x192" }]
     }
   ]
 }
