--- a/client/public/manifest-assistente.json
+++ b/client/public/manifest-assistente.json
@@ -1,10 +1,12 @@
 {
+  "id": "poweringeg-assistente-ia",
   "name": "PoweringEG - Assistente IA",
   "short_name": "Assistente IA",
   "description": "Assistente de IA para gestores Express Glass",
-  "start_url": "/assistente-widget",
+  "start_url": "/assistente-pwa.html",
+  "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#f5f3ff",
   "theme_color": "#7c3aed",
   "orientation": "portrait",
   "icons": [
@@ -12,13 +14,25 @@
       "src": "/poweringeg-ai-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/poweringeg-ai-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
       "src": "/poweringeg-ai-icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/poweringeg-ai-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "categories": ["business", "productivity"],
