--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,8 +1,10 @@
 {
+  "id": "poweringeg-tarefas-widget",
   "name": "PoweringEG - Tarefas",
   "short_name": "Tarefas EG",
   "description": "Widget de tarefas To-Do para lojas Express Glass",
   "start_url": "/portal-loja/widget",
+  "scope": "/portal-loja",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#10b981",
@@ -12,13 +14,25 @@
       "src": "/pwa-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/pwa-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
     },
     {
       "src": "/pwa-icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "/pwa-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "categories": ["business", "productivity"],
