Checkpoint: v6.4.2 - Correção do botão de instalação PWA do Assistente IA: melhorada lógica de deteção do evento beforeinstallprompt, adicionado fallback robusto, criado service worker dedicado, corrigido start_url no manifest, adicionado modo debug para diagnóstico

--- a/client/public/manifest-assistente.json
+++ b/client/public/manifest-assistente.json
@@ -3,7 +3,7 @@
   "name": "PoweringEG - Assistente IA",
   "short_name": "Assistente IA",
   "description": "Assistente de IA para gestores Express Glass",
-  "start_url": "/assistente-pwa.html",
+  "start_url": "/assistente-widget",
   "scope": "/",
   "display": "standalone",
   "background_color": "#f5f3ff",
