Checkpoint: v6.4.5 - Renomeado "Assistente IA" para "PoweringEG" na página de instalação PWA e no manifest. Agora a app instalada aparece como "PoweringEG".

--- a/client/public/manifest-assistente.json
+++ b/client/public/manifest-assistente.json
@@ -1,7 +1,7 @@
 {
   "id": "poweringeg-assistente-ia",
-  "name": "PoweringEG - Assistente IA",
-  "short_name": "Assistente IA",
+  "name": "PoweringEG",
+  "short_name": "PoweringEG",
   "description": "Assistente de IA para gestores Express Glass",
   "start_url": "/assistente-widget",
   "scope": "/",
