Checkpoint: v6.10.8 - Correções PWA Portal da Loja: 1) Manifest atualizado para v3 com scope "/" mais amplo e short_name "Portal Loja" para diferenciar; 2) Service worker atualizado para v3; 3) Sessão (lojaAuth) persistida no localStorage; 4) Troca de manifest feita imediatamente ao carregar a página.

--- a/client/public/manifest-portal-loja.json
+++ b/client/public/manifest-portal-loja.json
@@ -1,10 +1,10 @@
 {
-  "id": "poweringeg-portal-loja-v2",
+  "id": "poweringeg-portal-loja-v3",
   "name": "PoweringEG - Portal da Loja",
-  "short_name": "PoweringEG",
+  "short_name": "Portal Loja",
   "description": "Portal de gestão PoweringEG para lojas ExpressGlass - Reuniões, Tarefas, Pendentes e Resultados",
   "start_url": "/portal-loja",
-  "scope": "/portal-loja",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#10b981",
