--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "react": "^19.2.1",
     "react-chartjs-2": "^5.3.1",
